# f1flagbulb

./: .gitignore  F1FlagDesktop.spec  F1FlagWebApp.spec  README.md  config.py  example_nascar_simple.py  f1_monitor.py  gui.py  kasa_manager.py  main.py  motogp_monitor.py  nascar_monitor.py  pyproject.toml  react_pyodide_implementation.md  requirements.txt  settings.json  test_nascar.py  web_app.py
templates/: index.html
